tests/semantic/pass/compare_pointer2incomplete_struct.c
struct S;
int main(void) {
  struct S *s1;
  struct S *s2;
  s1 < s2;
  return 0;
}
