tests/semantic/fail/illegal_subscript.c
int main(void) {
  int *intptr;
  intptr[intptr]; //<--intptr is not an integer
  return 0;
}
